; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-callback-order.c_next_tick.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-callback-order.c_next_tick.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* }

@idle_handle = common dso_local global i32 0, align 4
@idle_cb = common dso_local global i32 0, align 4
@timer_handle = common dso_local global i32 0, align 4
@timer_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*)* @next_tick to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @next_tick(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = load i32*, i32** %5, align 8
  store i32* %6, i32** %3, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %8 = call i32 @uv_idle_stop(%struct.TYPE_4__* %7)
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @uv_idle_init(i32* %9, i32* @idle_handle)
  %11 = load i32, i32* @idle_cb, align 4
  %12 = call i32 @uv_idle_start(i32* @idle_handle, i32 %11)
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @uv_timer_init(i32* %13, i32* @timer_handle)
  %15 = load i32, i32* @timer_cb, align 4
  %16 = call i32 @uv_timer_start(i32* @timer_handle, i32 %15, i32 0, i32 0)
  ret void
}

declare dso_local i32 @uv_idle_stop(%struct.TYPE_4__*) #1

declare dso_local i32 @uv_idle_init(i32*, i32*) #1

declare dso_local i32 @uv_idle_start(i32*, i32) #1

declare dso_local i32 @uv_timer_init(i32*, i32*) #1

declare dso_local i32 @uv_timer_start(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
